Fix sponsor logo aspect ratio distortion.

--- a/_sass/partials/_partners.scss
+++ b/_sass/partials/_partners.scss
@@ -16,6 +16,8 @@
     }
     img {
         width: 100%;
+        height: auto;
+        object-fit: contain;
         transition: $base-transition;
         filter: grayscale(1);
         &:hover {
